--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://www.usher-syndrome.org.tw/"
+baseURL = "https://usher-site.vercel.app/"
 title = "Educenter | hugo education template"
 theme = "educenter-hugo"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
