--- a/data/zh-tw/homepage.yml
+++ b/data/zh-tw/homepage.yml
@@ -26,7 +26,7 @@ slider:
         link : "contact/"
 
     # slider item loop
-    - title : "視聽雙弱及其他特殊障礙"
+    - title : "視聽雙弱障礙"
       content : "協助視聽雙弱病友相同境遇患者，共同面對生活中的挑戰與課題"
       animation_in : "left"
       animation_out : "right"
@@ -43,19 +43,19 @@ banner_feature:
   image : "images/banner/banner-feature.png"
   feature_item:
     # feature item loop
-    - name : "Scholorship News"
+    - name : "關懷、互助"
       icon : "ti-book" # icon pack : https://themify.me/themify-icons
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  dolore magna aliqua. Ut enim ad"
+      content : "遇見不僅僅是朋友，更會互相扶持的夥伴，遇到困難時，會伸出援手，一起克服挑戰；在這裏，不會感到孤單，因為這裡充滿了溫暖與關懷；在這裏，每個人都是重要的，都會被尊重和欣賞。"
 
     # feature item loop
-    - name : "Our Notice Board"
+    - name : "脆弱、勇氣"
       icon : "ti-blackboard" # icon pack : https://themify.me/themify-icons
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  dolore magna aliqua. Ut enim ad"
+      content : "面對疾病、脆弱，其實也是另外一種形式的勇氣。脆弱不是弱點，也不是軟弱，而是把那個真心、真實捧在手上。承認障礙不代表你是弱者，而是接納、誠實和善待。接受疾病的脆弱，同時也是肯定自我的強大"
 
     # feature item loop
-    - name : "Our Achievements"
+    - name : "生命、實踐"
       icon : "ti-agenda" # icon pack : https://themify.me/themify-icons
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  dolore magna aliqua. Ut enim ad"
+      content : "生命是一段旅程，充滿了各種可能性和機會。每一個生命都是獨一無二的，擁有自己的價值和意義。每一個生命的起伏、轉折都構成了獨特的生命故事，這些經歷讓我們成為更豐富、更完整的人。"
 
     # feature item loop
     - name : "Admission Now"
