--- a/data/zh-tw/homepage.yml
+++ b/data/zh-tw/homepage.yml
@@ -43,30 +43,30 @@ banner_feature:
   image : "images/banner/banner-feature.png"
   feature_item:
     # feature item loop
-    - name : "關懷、互助"
-      icon : "ti-book" # icon pack : https://themify.me/themify-icons
-      content : "遇見不僅僅是朋友，更會互相扶持的夥伴，遇到困難時，會伸出援手，一起克服挑戰；在這裏，不會感到孤單，因為這裡充滿了溫暖與關懷；在這裏，每個人都是重要的，都會被尊重和欣賞。"
+    - name : "什麼是尤塞氏症 (Usher Syndrome)？"
+      icon : "ti-search" # icon pack : https://themify.me/themify-icons
+      content : "尤塞氏症是一種罕見的遺傳性疾病，目前估計全球共有 **400,000** 名左右的患者。主要特徵是**先天性的聽力損失**，以及影響眼睛的**視網膜色素病變**，此外，某些尤塞氏症患者可能還會有**平衡問題**。"
 
     # feature item loop
-    - name : "脆弱、勇氣"
-      icon : "ti-blackboard" # icon pack : https://themify.me/themify-icons
-      content : "面對疾病、脆弱，其實也是另外一種形式的勇氣。脆弱不是弱點，也不是軟弱，而是把那個真心、真實捧在手上。承認障礙不代表你是弱者，而是接納、誠實和善待。接受疾病的脆弱，同時也是肯定自我的強大"
+    - name : "聽力損失 (Hearing Impairment)"
+      icon : "ti-headphone" # icon pack : https://themify.me/themify-icons
+      content : "罹患尤塞氏症，在出生時或於漸漸成長時，會有聽力損失的情形。主要為感音性聽力損失，大多數損失頻率偏向中高頻率。"
 
     # feature item loop
-    - name : "生命、實踐"
-      icon : "ti-agenda" # icon pack : https://themify.me/themify-icons
-      content : "生命是一段旅程，充滿了各種可能性和機會。每一個生命都是獨一無二的，擁有自己的價值和意義。每一個生命的起伏、轉折都構成了獨特的生命故事，這些經歷讓我們成為更豐富、更完整的人。"
+    - name : "視網膜色素病變 (Retinitis Pigmentosa)"
+      icon : "ti-eye" # icon pack : https://themify.me/themify-icons
+      content : "尤塞氏症會引起視網膜色素病變。受影響的視網膜逐漸退化，導致夜盲、視野狹窄。視野狹窄的特徵又被稱為隧道狀視野，用以形容僅剩中央局部視覺的狀況。"
 
     # feature item loop
-    - name : "Admission Now"
-      icon : "ti-write" # icon pack : https://themify.me/themify-icons
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  dolore magna aliqua. Ut enim ad"
+    - name : "平衡問題及其他"
+      icon : "ti-split-h" # icon pack : https://themify.me/themify-icons
+      content : "有某些類型尤塞氏症患者，會有輕微至嚴重的平衡問題。另外也有案例報告，有嗅味覺喪失的情況。<br><br>尤塞氏症患者臨床傳統上，依據症狀嚴重程度、病程進展以分類。"
 
 
 ############################## about ##################################
 about:
   enable : true
-  title : "About Educenter"
+  title : "尤塞氏症與視聽雙弱的困境"
   image : "images/about/about-us.jpg"
   content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat  pariatur. Excepteur sint occaecat
 
