--- a/data/zh-tw/homepage.yml
+++ b/data/zh-tw/homepage.yml
@@ -66,12 +66,12 @@ banner_feature:
 ############################## about ##################################
 about:
   enable : true
-  title : "尤塞氏症與視聽雙弱族群的困境"
+  title : "視聽雙弱族群的困境"
   image : "images/about/about-us.jpg"
   content : "在台灣，除了尤塞氏症患者外，還有一群極為少數的人，因為不明原因（已證明或未證實的相關致病基因、後天因素），而一樣直接影響了視力、聽力，導致其比起正常人來說，直接被剝奪了，與外界溝通最重要的兩個管道。遺憾的是，由於群體極為少眾，以及特殊的雙重受限經驗，傳統的無障礙輔助設計、資源不見得適用。<br><br>而在罕見疾病族群之中，也端為少見的基因型態，使其更難受到醫藥研究關注、照護資源的挹注。尤塞氏症與其這些族群的共同困境，將會是本協會著重的課題。"
   button:
     enable : true
-    label : "Learn more"
+    label : "故事"
     link : "about/"
 
 
