--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://usher.org.tw/"
+baseURL = "https://www.usher.org.tw/"
 title = "台灣尤塞氏症暨視聽弱協會 | 尤塞氏症以及視聽雙弱者之病友團體"
 theme = "educenter-hugo"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
